src/objects/blng__ErrorLog__c.object
<CustomObject>
    <description>Next Generation Billing exception log object. It keeps track of all the exception in the org. Logging can be switched off and on using NGBExceptionSwitch label.</description>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BalanceSnapshotRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Balance Snapshot Run</label>
        <referenceTo>blng__BalanceSnapShotRun__c</referenceTo>
        <relationshipName>BalanceSnapshotRunErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BatchJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Job</label>
        <referenceTo>blng__BillingBatchJob__c</referenceTo>
        <relationshipName>BatchJobErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__CreditNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note Line</label>
        <referenceTo>blng__CreditNoteLine__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Note Line</label>
        <referenceTo>blng__DebitNoteLine__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ErrorCode__c</fullName>
        <description>Code of exception. For standard exception it would be name e.g. DMLException. For custom exceptions it would be Error code defined by us. E.g. Batch 101 – Invoice batch transaction failed, Batch 202 – Payment batch transaction failed. This field will have only Batch 101 as value.</description>
        <label>Error Code</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ErrorName__c</fullName>
        <label>Error Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__ErrorOrigin__c</fullName>
        <label>Error Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__FullErrorLog__c</fullName>
        <description>Actual message of the exception.</description>
        <label>Full Error Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipName>InvoiceLineErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Run</label>
        <referenceTo>blng__InvoiceRun__c</referenceTo>
        <relationshipName>InvoiceRunErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Scheduler</label>
        <referenceTo>blng__InvoiceScheduler__c</referenceTo>
        <relationshipName>InvoiceSchedulerErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>blng__Invoice__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>InvoiceErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipName>OrderProductErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Error Logs (Order)</relationshipLabel>
        <relationshipName>OrdersErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__OriginMethod__c</fullName>
        <label>Origin Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__PaymentAllocationDebitNoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Allocation (Debit Note Line)</label>
        <referenceTo>blng__PaymentAllocationDebitNoteLine__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentAllocationInvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Allocation (Invoice Line)</label>
        <referenceTo>blng__PaymentAllocationInvoiceLine__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentAllocationInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Allocation (Invoice)</label>
        <referenceTo>blng__PaymentAllocationInvoice__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>blng__PaymentMethod__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentRun__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Run</label>
        <referenceTo>blng__PaymentRun__c</referenceTo>
        <relationshipName>PaymentRunErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentScheduler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Scheduler</label>
        <referenceTo>blng__PaymentScheduler__c</referenceTo>
        <relationshipName>PaymentSchedulerErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>blng__Payment__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__ReferenceId__c</fullName>
        <externalId>true</externalId>
        <label>ReferenceId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund</label>
        <referenceTo>blng__Refund__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Schedule</label>
        <referenceTo>blng__RevenueSchedule__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>RevenueScheduleErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Summary__c</fullName>
        <description>One line description of the exception. For standard it would remain the same e.g. DMLException. For custom it would be a summary e.g. – Payment batch transaction failed.</description>
        <label>Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Transaction</label>
        <referenceTo>blng__PaymentTransaction__c</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>ErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__UniqueId__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__Usage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Usage</label>
        <referenceTo>blng__Usage__c</referenceTo>
        <relationshipName>UsageErrorLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>blng__ErrorCode__c</columns>
        <columns>blng__ErrorName__c</columns>
        <columns>blng__ErrorOrigin__c</columns>
        <columns>blng__FullErrorLog__c</columns>
        <columns>blng__OriginMethod__c</columns>
        <columns>blng__ReferenceId__c</columns>
        <columns>blng__Summary__c</columns>
        <columns>blng__Transaction__c</columns>
        <columns>blng__InvoiceRun__c</columns>
        <columns>blng__InvoiceScheduler__c</columns>
        <columns>blng__PaymentRun__c</columns>
        <columns>blng__PaymentScheduler__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>